force-app/main/default/objects/ACO_Group__c/ACO_Group__c.object-meta.xml
<CustomObject>
    <label>ACO Group</label>
    <nameField>
        <label>ACO Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACO Groups</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>