force-app/main/default/objects/ACO_Group__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ACO Groups1</relationshipLabel>
    <relationshipName>ACO_Groups1</relationshipName>
    <type>Lookup</type>
</CustomField>