force-app/main/default/objects/ACO_Group__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Provide any additional comments to why group was created or how it should be used</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>