force-app/main/default/objects/ACO_Group__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Provide insight to why group was formed to help inform usage</description>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Common controlling interest</fullName>
            </value>
            <value>
                <fullName>Financial dependencies</fullName>
            </value>
            <value>
                <fullName>Common Ownership</fullName>
            </value>
            <value>
                <fullName>Common Key Personnel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>